tests/ui/parser/match-arm-without-body.stderr
error: expected one of `,`, `=>`, `if`, `|`, or `}`, found reserved identifier `_`
  --> $DIR/match-arm-without-body.rs:11:9
   |
LL |         Some(_)
   |                - expected one of `,`, `=>`, `if`, `|`, or `}`
LL |         _ => {}
   |         ^ unexpected token

error: unexpected `,` in pattern
  --> $DIR/match-arm-without-body.rs:15:16
   |
LL |         Some(_),
   |                ^
   |
help: try adding parentheses to match on a tuple...
   |
LL |         (Some(_),)
   |         +        +
help: ...or a vertical bar to match on multiple alternatives
   |
LL |         Some(_) |
   |

error: unexpected `,` in pattern
  --> $DIR/match-arm-without-body.rs:21:16
   |
LL |         Some(_),
   |                ^
   |
help: try adding parentheses to match on a tuple...
   |
LL ~         (Some(_),
LL |
LL |
LL |
LL ~         _) => {}
   |
help: ...or a vertical bar to match on multiple alternatives
   |
LL ~         Some(_) |
LL +
LL +
LL +
LL ~         _ => {}
   |

error: expected one of `,`, `.`, `=>`, `?`, `}`, or an operator, found reserved identifier `_`
  --> $DIR/match-arm-without-body.rs:32:9
   |
LL |         Some(_) if true
   |                        - expected one of `,`, `.`, `=>`, `?`, `}`, or an operator
LL |         _ => {}
   |         ^ unexpected token

error: expected `,` following `match` arm
  --> $DIR/match-arm-without-body.rs:52:15
   |
LL |         pat!()
   |               ^ help: missing a comma here to end this `match` arm: `,`

error: aborting due to 5 previous errors

